--- a/creatinggame/gamecreating.html
+++ b/creatinggame/gamecreating.html
@@ -3,6 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Your Wordle Game</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+
+        input[type="text"], input[type="number"] {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            background-color: #f8f8f8;
+            background-image: url('/application/static/background_score_list.png');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
+
+        button {
+            width: 100%;
+            padding: 14px 20px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
     <h1>Create Your Wordle Game</h1>
@@ -20,4 +54,3 @@
     </form>
 </body>
 </html>
-
