--- a/creatinggame/create_game.html
+++ b/creatinggame/create_game.html
@@ -7,6 +7,8 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-image: url('/application/static/background_score_list.png');
+            background-size: cover;
         }
 
         input[type="text"], input[type="number"] {
@@ -17,20 +19,32 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             background-color: #f8f8f8;
-            background-image: url('/application/static/background_score_list.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-position: center;
-        }
+            background-image: url('/application/static/gamepage/commentboard.png');
+            background-size: 30px 30px;
+            background-position: 10px center;
+            padding-left: 45px;
 
         button {
-            width: 100%;
+            width: calc(100% - 40px); /* 减去图标的宽度 */
             padding: 14px 20px;
             background-color: #4CAF50;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            position: relative; /* 设置相对定位用于图标 */
+        }
+
+        button::before {
+            content: '';
+            position: absolute;
+            left: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            height: 30px;
+            width: 30px;
+            background-image: url('/application/static/createpage/upload_button.png');
+            background-size: cover;
         }
 
         button:hover {
@@ -42,13 +56,13 @@
     <h1>Create Your Wordle Game</h1>
     <form action="/create_game" method="post">
         <label for="form_game_name">Please give a unique name for your wordle game:</label>
-        <input type="text" name="form_game_name" required><br><br>
+        <input type="text" name="form_game_name" placeholder="Please use letters and numbers" required><br><br>
 
         <label for="form_wordle_solution">Please type in the correct Wordle solution:</label>
-        <input type="text" name="form_wordle_solution" required><br><br>
+        <input type="text" name="form_wordle_solution" placeholder="Please use a real word" required><br><br>
 
         <label for="form_number_of_attempts">How many attempts are allowed for your Wordle game:</label>
-        <input type="number" name="form_number_of_attempts" required><br><br>
+        <input type="number" name="form_number_of_attempts" placeholder="Please use a number" required><br><br>
 
         <button type="submit">Submit and Create</button>
     </form>
